--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "sass-utilities",
-    "version": "1.0.0",
-    "description": "custom sass utilities",
-    "main": "src/index.html",
-    "author": "Edward Fernandez",
-    "license": "ISC"
+  "name": "sass-boilerplate",
+  "version": "1.0.0",
+  "description": "custom sass boilerplate",
+  "main": "src/index.html",
+  "author": "Edward Fernandez",
+  "license": "MIT"
 }
